thrift-parser/src/main/java/com/qiyi/walle/parser/thrift/base/ThriftBaseParser.java
// Generated from com/qiyi/walle/parser/thrift/base/ThriftBase.g4 by ANTLR 4.8
package com.qiyi.walle.parser.thrift.base;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ThriftBaseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		XsdAll=53, XsdOptional=54, XsdNillable=55, FieldRequiredness=56, ONEWAY=57, 
		ID=58, ST_ID=59, LITERAL=60, INT=61, DOUBLE=62, FLOAT=63, STRING=64, LINE_COMMENT=65, 
		COMMENT=66, WS=67;
	public static final int
		RULE_program = 0, RULE_header = 1, RULE_include = 2, RULE_cppInclude = 3, 
		RULE_namespace = 4, RULE_namespaceScope = 5, RULE_definition = 6, RULE_typeDefinition = 7, 
		RULE_typedef = 8, RULE_enumeration = 9, RULE_enumDef = 10, RULE_senum = 11, 
		RULE_senumDef = 12, RULE_constant = 13, RULE_constValue = 14, RULE_structHead = 15, 
		RULE_struct = 16, RULE_xsdAttributes = 17, RULE_xception = 18, RULE_service = 19, 
		RULE_function = 20, RULE_raise = 21, RULE_field = 22, RULE_fieldID = 23, 
		RULE_fieldValue = 24, RULE_functionType = 25, RULE_primitives = 26, RULE_fieldType = 27, 
		RULE_commaOrSemicolon = 28, RULE_cppType = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "header", "include", "cppInclude", "namespace", "namespaceScope", 
			"definition", "typeDefinition", "typedef", "enumeration", "enumDef", 
			"senum", "senumDef", "constant", "constValue", "structHead", "struct", 
			"xsdAttributes", "xception", "service", "function", "raise", "field", 
			"fieldID", "fieldValue", "functionType", "primitives", "fieldType", "commaOrSemicolon", 
			"cppType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'include'", "'cpp_include'", "'namespace'", "'smalltalk.category'", 
			"'smalltalk.prefix'", "'xsd_namespace'", "'php_namespace'", "'*'", "'cpp'", 
			"'java'", "'py'", "'perl'", "'rb'", "'cocoa'", "'csharp'", "'typedef'", 
			"'enum'", "'{'", "'}'", "'='", "'senum'", "'const'", "'['", "']'", "':'", 
			"'struct'", "'union'", "'xsd_attrs'", "'exception'", "'service'", "'extends'", 
			"'('", "')'", "'throws'", "'void'", "'string'", "'binary'", "'slist'", 
			"'bool'", "'byte'", "'i16'", "'i32'", "'i64'", "'double'", "'map'", "'<'", 
			"','", "'>'", "'set'", "'list'", "';'", "'cpp_type'", "'xsd_all'", "'xsd_optional'", 
			"'xsd_nillable'", null, "'oneway'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "XsdAll", "XsdOptional", "XsdNillable", 
			"FieldRequiredness", "ONEWAY", "ID", "ST_ID", "LITERAL", "INT", "DOUBLE", 
			"FLOAT", "STRING", "LINE_COMMENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ThriftBase.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ThriftBaseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) {
				{
				{
				setState(60);
				header();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__26) | (1L << T__28) | (1L << T__29))) != 0)) {
				{
				{
				setState(66);
				definition();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	 
		public HeaderContext() { }
		public void copyFrom(HeaderContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CppIncludeDefinitionContext extends HeaderContext {
		public CppIncludeContext cppInclude() {
			return getRuleContext(CppIncludeContext.class,0);
		}
		public CppIncludeDefinitionContext(HeaderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterCppIncludeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitCppIncludeDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitCppIncludeDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IncludeDefinitionContext extends HeaderContext {
		public IncludeContext include() {
			return getRuleContext(IncludeContext.class,0);
		}
		public IncludeDefinitionContext(HeaderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterIncludeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitIncludeDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitIncludeDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NamespaceDefinitionContext extends HeaderContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public NamespaceDefinitionContext(HeaderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterNamespaceDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitNamespaceDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitNamespaceDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new IncludeDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				include();
				}
				break;
			case T__1:
				_localctx = new CppIncludeDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				cppInclude();
				}
				break;
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
				_localctx = new NamespaceDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				namespace();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode LITERAL() { return getToken(ThriftBaseParser.LITERAL, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(78);
			match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CppIncludeContext extends ParserRuleContext {
		public TerminalNode LITERAL() { return getToken(ThriftBaseParser.LITERAL, 0); }
		public CppIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cppInclude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterCppInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitCppInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitCppInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CppIncludeContext cppInclude() throws RecognitionException {
		CppIncludeContext _localctx = new CppIncludeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cppInclude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__1);
			setState(81);
			match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public NamespaceScopeContext namespaceScope() {
			return getRuleContext(NamespaceScopeContext.class,0);
		}
		public TerminalNode ID() { return getToken(ThriftBaseParser.ID, 0); }
		public TerminalNode ST_ID() { return getToken(ThriftBaseParser.ST_ID, 0); }
		public TerminalNode LITERAL() { return getToken(ThriftBaseParser.LITERAL, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitNamespace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitNamespace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namespace);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(T__2);
				setState(84);
				namespaceScope();
				setState(85);
				match(ID);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(T__3);
				setState(88);
				match(ST_ID);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				match(T__4);
				setState(90);
				match(ID);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				match(T__5);
				setState(92);
				match(LITERAL);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(T__6);
				setState(94);
				match(LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceScopeContext extends ParserRuleContext {
		public NamespaceScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterNamespaceScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitNamespaceScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitNamespaceScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceScopeContext namespaceScope() throws RecognitionException {
		NamespaceScopeContext _localctx = new NamespaceScopeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_namespaceScope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	 
		public DefinitionContext() { }
		public void copyFrom(DefinitionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TypeDefinitionDefinitionContext extends DefinitionContext {
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public TypeDefinitionDefinitionContext(DefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterTypeDefinitionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitTypeDefinitionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitTypeDefinitionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstantDefinitionContext extends DefinitionContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ConstantDefinitionContext(DefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterConstantDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitConstantDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitConstantDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ServiceDefinitionContext extends DefinitionContext {
		public ServiceContext service() {
			return getRuleContext(ServiceContext.class,0);
		}
		public ServiceDefinitionContext(DefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterServiceDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitServiceDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitServiceDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_definition);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__21:
				_localctx = new ConstantDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				constant();
				}
				break;
			case T__15:
			case T__16:
			case T__20:
			case T__25:
			case T__26:
			case T__28:
				_localctx = new TypeDefinitionDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				typeDefinition();
				}
				break;
			case T__29:
				_localctx = new ServiceDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				service();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefinitionContext extends ParserRuleContext {
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
	 
		public TypeDefinitionContext() { }
		public void copyFrom(TypeDefinitionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EnumerationDefinitionContext extends TypeDefinitionContext {
		public EnumerationContext enumeration() {
			return getRuleContext(EnumerationContext.class,0);
		}
		public EnumerationDefinitionContext(TypeDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterEnumerationDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitEnumerationDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitEnumerationDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TypedefDefinitionContext extends TypeDefinitionContext {
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public TypedefDefinitionContext(TypeDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterTypedefDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitTypedefDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitTypedefDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExceptionDefinitionContext extends TypeDefinitionContext {
		public XceptionContext xception() {
			return getRuleContext(XceptionContext.class,0);
		}
		public ExceptionDefinitionContext(TypeDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterExceptionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitExceptionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitExceptionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SenumDefinitionContext extends TypeDefinitionContext {
		public SenumContext senum() {
			return getRuleContext(SenumContext.class,0);
		}
		public SenumDefinitionContext(TypeDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterSenumDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitSenumDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitSenumDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StructDefinitionContext extends TypeDefinitionContext {
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public StructDefinitionContext(TypeDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).enterStructDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftBaseListener ) ((ThriftBaseListener)listener).exitStructDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ThriftBaseVisitor ) return ((ThriftBaseVisitor<? extends T>)visitor).visitStructDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
